--- a/src/app/new-page/component/content-accordion/content-accordion.component.html
+++ b/src/app/new-page/component/content-accordion/content-accordion.component.html
@@ -3,8 +3,7 @@
     <div class="accordion mw568">
       <button class="accordion-header" (click)="onClick($event)">
         {{ section.section.header.text }}
-        <i class="far fa-plus"></i>
-        <i class="far fa-minus"></i>
+        <i class="far fa-chevron-down"></i>
       </button>
       <div class="accordion-content">
         <app-content-new-repeater
