--- a/src/app/page/component/content-accordion/content-accordion.component.html
+++ b/src/app/page/component/content-accordion/content-accordion.component.html
@@ -1,10 +1,9 @@
 <ng-container *ngIf="ready && sections">
   <ng-container *ngFor="let section of sections; trackBy: trackByFn">
-    <div class="accordian mw568">
+    <div class="accordion mw568">
       <button class="accordion-header" (click)="onClick($event)">
         {{ section.section.header.text }}
-        <i class="far fa-plus"></i>
-        <i class="far fa-minus"></i>
+        <i class="far fa-chevron-down"></i>
       </button>
       <div class="accordion-content">
         <app-content-new-repeater
