--- a/src/app/page/component/content-button/content-button.component.html
+++ b/src/app/page/component/content-button/content-button.component.html
@@ -13,6 +13,7 @@
       class="button"
       [ngStyle]="{ 'background-color': buttonBgColor, color: buttonTextColor }"
       (click)="formAction()"
+      href="javascript:void(0)"
       >{{ buttonText }}</a
     >
   </div>
