--- a/src/app/page/component/content-link/content-link.component.html
+++ b/src/app/page/component/content-link/content-link.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="ready">
   <div class="linkContent indent">
-    <a (click)="formAction(events)">{{ linkText }}</a>
+    <a (click)="formAction(events)" href="javascript:void(0)">{{ linkText }}</a>
   </div>
 </ng-container>
