--- a/src/app/page/component/tract-page/tract-page.component.html
+++ b/src/app/page/component/tract-page/tract-page.component.html
@@ -2,6 +2,7 @@
   <div
     id="toolContent"
     [ngClass]="{
+      tc: isLastPage$ | async,
       firstPage: isFirstPage$ | async,
       lastPage: isLastPage$ | async,
       hasPageHeader: hasPageHeader
