Switching isHidden to isTemporarilyHidden so we can change the value without having to change the type of card.

--- a/src/app/page/component/card/card.component.html
+++ b/src/app/page/component/card/card.component.html
@@ -2,7 +2,7 @@
   attr.id="card-{{ cardPosition }}"
   class="cardContent"
   *ngIf="ready"
-  [hidden]="card.isHidden"
+  [hidden]="card.isTemporarilyHidden"
   [ngClass]="{
     hasHeading: !(card.listeners.length && card.dismissListeners.length)
   }"
