Cleaning up spelling mistakes

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -14,7 +14,7 @@
         /></a>
         <span
           class="kg-gray-dark ng-binding language-selector-toggle"
-          (click)="onToggleLanaguageSelect()"
+          (click)="onToggleLanguageSelect()"
         >
           <img src="assets/img/lang.png" class="langicon" /> {{ selectedLang }}
           <i class="fas fa-chevron-up flip"></i>
