--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -1,5 +1,10 @@
 <ng-container *ngIf="ready">
   <!-- Add back whe text is formatted [ngStyle]="{ color: textColor }" -->
+  <img
+    *ngIf="startImgResource"
+    [src]="startImgResource"
+    [ngStyle]="{ width: startImgWidth }"
+  />
   <p
     class="mw568 textContent"
     [ngClass]="{ firstContent: isFirstPage$ | async }"
