Implement events on images

--- a/src/app/page/component/content-image/content-image.component.html
+++ b/src/app/page/component/content-image/content-image.component.html
@@ -1,5 +1,14 @@
 <ng-container *ngIf="ready">
+  <a *ngIf="isEventType" (click)="formAction()" href="javascript:void(0)">
+    <img
+      class="imageContent ng-binding"
+      [ngClass]="{ firstImage: isFirstPage$ | async }"
+      [src]="imgResource"
+      [ngStyle]="{ width: width }"
+    />
+  </a>
   <img
+    *ngIf="!isEventType"
     class="imageContent ng-binding"
     [ngClass]="{ firstImage: isFirstPage$ | async }"
     [src]="imgResource"
