--- a/src/app/page/component/content-accordion/content-accordion.component.css
+++ b/src/app/page/component/content-accordion/content-accordion.component.css
@@ -61,6 +61,6 @@
   max-height: 400px;
 }
 
-.accordion-content app-content-new-repeater {
+.accordion-content app-content-repeater {
   margin-top: 0;
 }
