--- a/src/app/page/component/content-flow/content-flow.component.css
+++ b/src/app/page/component/content-flow/content-flow.component.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-.flow app-content-new-flow-item {
+.flow app-content-flow-item {
   margin: 0;
   display: inline-block;
 }
