--- a/src/app/page/component/content-multiselect-option/content-multiselect-option.component.css
+++ b/src/app/page/component/content-multiselect-option/content-multiselect-option.component.css
@@ -2,8 +2,8 @@
   padding: 20px;
 }
 
-.multiselect-option app-content-new-repeater {
-  margin: 0
+.multiselect-option app-content-repeater {
+  margin: 0;
 }
 
 @media (max-width: 600px) {
