--- a/src/app/page/component/modal/modal.component.html
+++ b/src/app/page/component/modal/modal.component.html
@@ -8,6 +8,6 @@
   </div>
 
   <ng-container *ngIf="content">
-    <app-content-new-repeater [items]="content"></app-content-new-repeater>
+    <app-content-repeater [items]="content"></app-content-repeater>
   </ng-container>
 </ng-container>
