--- a/src/app/page/component/content-accordion/content-accordion.component.html
+++ b/src/app/page/component/content-accordion/content-accordion.component.html
@@ -6,9 +6,7 @@
         <i class="far fa-chevron-down"></i>
       </button>
       <div class="accordion-content">
-        <app-content-new-repeater
-          [items]="section.contents"
-        ></app-content-new-repeater>
+        <app-content-repeater [items]="section.contents"></app-content-repeater>
       </div>
     </div>
   </ng-container>
