--- a/src/app/page/component/content-card/content-card.component.html
+++ b/src/app/page/component/content-card/content-card.component.html
@@ -4,7 +4,7 @@
     class="card"
     [ngStyle]="{ 'background-color': background }"
   >
-    <app-content-new-repeater [items]="contents"></app-content-new-repeater>
+    <app-content-repeater [items]="contents"></app-content-repeater>
   </div>
   <a
     *ngIf="card.isClickable"
@@ -12,6 +12,6 @@
     (click)="eventClick()"
     [ngStyle]="{ 'background-color': background }"
   >
-    <app-content-new-repeater [items]="contents"></app-content-new-repeater>
+    <app-content-repeater [items]="contents"></app-content-repeater>
   </a>
 </ng-container>
