--- a/src/app/page/component/content-flow-item/content-flow-item.component.html
+++ b/src/app/page/component/content-flow-item/content-flow-item.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="ready && !isHidden" class="flow-item">
-  <app-content-new-repeater [items]="contents"></app-content-new-repeater>
+  <app-content-repeater [items]="contents"></app-content-repeater>
 </div>
