--- a/src/app/page/component/content-flow/content-flow.component.html
+++ b/src/app/page/component/content-flow/content-flow.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="ready">
   <div class="flow mw568">
-    <app-content-new-flow-item
+    <app-content-flow-item
       *ngFor="let item of items; trackBy: trackByFn"
       [item]="item"
     >
-    </app-content-new-flow-item>
+    </app-content-flow-item>
   </div>
 </ng-container>
