--- a/src/app/page/component/content-form/content-form.component.html
+++ b/src/app/page/component/content-form/content-form.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="ready && items && items.length">
   <form class="formContent mw568 indent">
-    <app-content-new-repeater [items]="items"></app-content-new-repeater>
+    <app-content-repeater [items]="items"></app-content-repeater>
   </form>
 </ng-container>
