--- a/src/app/page/component/content-multiselect-option/content-multiselect-option.component.html
+++ b/src/app/page/component/content-multiselect-option/content-multiselect-option.component.html
@@ -7,5 +7,5 @@
   [ngClass]="{ selected: selected }"
   (click)="onClick()"
 >
-  <app-content-new-repeater [items]="contents"></app-content-new-repeater>
+  <app-content-repeater [items]="contents"></app-content-repeater>
 </div>
