--- a/src/app/page/component/content-multiselect/content-multiselect.component.css
+++ b/src/app/page/component/content-multiselect/content-multiselect.component.css
@@ -4,25 +4,22 @@
   gap: 15px;
 }
 
-.multiselect-option app-content-new-repeater {
+.multiselect-option app-content-repeater {
   margin: 0;
 }
 
-.multiselect[data-columns="1"] app-content-new-multiselect-option {
+.multiselect[data-columns='1'] app-content-multiselect-option {
   flex: 0 1 100%;
 }
 
-.multiselect[data-columns="2"] app-content-new-multiselect-option {
+.multiselect[data-columns='2'] app-content-multiselect-option {
   flex: 0 1 calc(50% - 15px);
 }
 
-.multiselect[data-columns="3"] app-content-new-multiselect-option {
+.multiselect[data-columns='3'] app-content-multiselect-option {
   flex: 0 1 calc(33.3% - 10px);
 }
 
-.multiselect[data-columns="4"] app-content-new-multiselect-option {
+.multiselect[data-columns='4'] app-content-multiselect-option {
   flex: 0 1 calc(25% - 11.25px);
-
 }
-
-
