--- a/src/app/page/component/content-paragraph/content-paragraph.component.html
+++ b/src/app/page/component/content-paragraph/content-paragraph.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="ready && items && items.length">
-  <app-content-new-repeater [items]="items"></app-content-new-repeater>
+  <app-content-repeater [items]="items"></app-content-repeater>
 </ng-container>
