--- a/src/app/page/component/page-hero/page-hero.component.html
+++ b/src/app/page/component/page-hero/page-hero.component.html
@@ -11,5 +11,5 @@
   <h2 class="mw568 tc firstHeading" [innerHTML]="headingText"></h2>
 </ng-container>
 <ng-container *ngIf="ready && content && (isForm$ | async) === false">
-  <app-content-new-repeater [items]="content"></app-content-new-repeater>
+  <app-content-repeater [items]="content"></app-content-repeater>
 </ng-container>
