Render the card collection page if the cyoa page has cards

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -38,12 +38,20 @@
 
     <div *ngIf="activePage && !bookNotAvailableInLanguage && !bookNotAvailable">
       <app-cyoa-page
-        *ngIf="resourceType === 'cyoa'"
+        *ngIf="resourceType === 'cyoa' && !activePage.hasOwnProperty('_cards')"
         [page]="activePage"
         [order]="activePageOrder"
         [totalPages]="totalPages"
       >
       </app-cyoa-page>
+
+      <app-cyoa-card-collection-page
+        *ngIf="resourceType === 'cyoa' && activePage.hasOwnProperty('_cards')"
+        [page]="activePage"
+        [order]="activePageOrder"
+        [totalPages]="totalPages"
+      >
+      </app-cyoa-card-collection-page>
 
       <app-tract-page
         *ngIf="resourceType === 'tract'"
