--- a/src/app/page/component/cyoa/card/card.component.css
+++ b/src/app/page/component/cyoa/card/card.component.css
@@ -4,11 +4,13 @@
 }
 
 div.cardContent {
-  margin: 100px 50px 0 50px;
+  margin-top: 100px;
+  margin-block: 50px;
   background-color: #f8f8f8;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
-  padding: 20px 20px 10px 20px;
+  padding: 20px;
+  padding-bottom: 10px;
 }
 
 p.cardPosition {
