--- a/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
+++ b/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
@@ -69,18 +69,16 @@
       </ng-container>
     </div>
 
-    <ng-container
-      *ngIf="(isModal$ | async) === false && (isModal$ | async) === false"
-    >
+    <ng-container *ngIf="(isModal$ | async) === false">
       <footer id="toolFooter">
         <span
-          ><a href="http://godtoolsapp.com" target="_blank"
+          ><a href="https://godtoolsapp.com" target="_blank"
             >Learn more at godtoolsapp.com</a
           ></span
         >
         <span
           >© 1994-{{ currentYear }}
-          <a href="http://cru.org" target="_blank">Cru</a>. All Rights
+          <a href="https://cru.org" target="_blank">Cru</a>. All Rights
           Reserved.</span
         >
       </footer>
