Make isFirstCard and isLastCard into methods, clean up conditional checks

--- a/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
+++ b/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
@@ -26,7 +26,7 @@
     >
       <ng-container *ngIf="(dir$ | async) === 'ltr'">
         <!-- If not first page -->
-        <ng-container *ngIf="!isFirstCard">
+        <ng-container *ngIf="!isFirstCard()">
           <a
             (click)="showPreviousCard()"
             href="javascript:void(0)"
@@ -36,7 +36,7 @@
         </ng-container>
 
         <!-- If not last page -->
-        <ng-container *ngIf="!isLastCard">
+        <ng-container *ngIf="!isLastCard()">
           <a
             (click)="showNextCard()"
             href="javascript:void(0)"
@@ -48,7 +48,7 @@
 
       <ng-container *ngIf="(dir$ | async) === 'rtl'">
         <!-- If not first page -->
-        <ng-container *ngIf="!isLastCard">
+        <ng-container *ngIf="!isLastCard()">
           <a
             (click)="showNextCard()"
             href="javascript:void(0)"
@@ -58,7 +58,7 @@
         </ng-container>
 
         <!-- If not last page -->
-        <ng-container *ngIf="!isFirstCard">
+        <ng-container *ngIf="!isFirstCard()">
           <a
             (click)="showPreviousCard()"
             href="javascript:void(0)"
