Add setCardUrl() to navigate cards

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -50,6 +50,7 @@
         [page]="activePage"
         [order]="activePageOrder"
         [totalPages]="totalPages"
+        [setCardUrl]="setCardUrl"
       >
       </app-cyoa-card-collection-page>
 
