--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -38,7 +38,7 @@
 
     <div *ngIf="activePage && !bookNotAvailableInLanguage && !bookNotAvailable">
       <app-cyoa-page
-        *ngIf="resourceType === 'cyoa' && activePageType === 'content'"
+        *ngIf="resourceType === 'cyoa' && getPageType() === 'content'"
         [page]="activePage"
         [order]="activePageOrder"
         [totalPages]="totalPages"
@@ -46,7 +46,7 @@
       </app-cyoa-page>
 
       <app-cyoa-card-collection-page
-        *ngIf="resourceType === 'cyoa' && activePageType === 'card-collection'"
+        *ngIf="resourceType === 'cyoa' && getPageType() === 'card-collection'"
         [page]="activePage"
         [order]="activePageOrder"
         [totalPages]="totalPages"
