add hasStartImage class to text component

--- a/src/app/page/component/content-text/content-text.component.css
+++ b/src/app/page/component/content-text/content-text.component.css
@@ -12,3 +12,8 @@ p.textContent {
 :host:not(:first-child) > p.textContent {
   margin-top: 12px;
 }
+
+:host > p.hasStartImage {
+  margin: 0px;
+  width: auto;
+}
