--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -7,7 +7,10 @@
   />
   <p
     class="mw568 textContent"
-    [ngClass]="{ firstContent: isFirstPage$ | async }"
+    [ngClass]="{
+      firstContent: isFirstPage$ | async,
+      hasStartImage: startImgResource
+    }"
     [ngStyle]="styles"
     [innerHTML]="textValue"
     dir="{{ dir$ | async }}"
