Make back arrow position absolute

--- a/src/app/page/component/page/cyoa-page/cyoa-page.component.css
+++ b/src/app/page/component/page/cyoa-page/cyoa-page.component.css
@@ -1,4 +1,8 @@
 .backwards-navigation {
   padding: 10px 20px;
   display: inline-block;
+  position: absolute;
+}
+#toolContent {
+  position: relative;
 }
