--- a/src/app/page/component/page/cyoa-page/cyoa-page.component.css
+++ b/src/app/page/component/page/cyoa-page/cyoa-page.component.css
@@ -1,4 +1,17 @@
 .backwards-navigation {
-  padding: 0 20px;
+  padding-inline: 20px;
+  padding-top: 10px;
   display: inline-block;
+}
+.back-arrow-container {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.back-arrow-container.rtl {
+  justify-content: flex-end;
+}
+
+.back-arrow-container.rtl img {
+  transform: rotate(180deg);
 }
