--- a/src/app/page/component/page/cyoa-page/cyoa-page.component.css
+++ b/src/app/page/component/page/cyoa-page/cyoa-page.component.css
@@ -1,6 +1,5 @@
 .backwards-navigation {
-  padding-inline: 20px;
-  padding-top: 10px;
+  padding: 10px 20px 0;
   display: inline-block;
 }
 .back-arrow-container {
