--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -12,6 +12,7 @@
       *ngIf="startImgResource"
       [src]="startImgResource"
       [ngStyle]="{ width: startImgWidth }"
+      [alt]="text"
     /><span [innerHTML]="textValue"></span>
   </p>
 </ng-container>
