GT-2462 Add CYOA Tools to the Web App (#221)
* Render coya adventure books onto the homepage.

* Allow CYOA type content on the web

* Render CYOA tools using the tract-page component

* Support text-scale on web

* Add text scale to text content.

* Update @cruglobal/godtools-shared to the latest version.

* Adding the CYOA page

* Adding the cyoa page

* Adding CSS

* Update @cruglobal/godtools-shared

* Fix mocks

* Implement events on images (#242)

* Force push to update PR

* Adding the Navigation stack for CYOA

* Rename Header component to Dashboard

* Cleaning up Dashboard and adding the new /tool/ URL structure

* Changing URL parameters to meet Js standards

* Changing pageid URL parameters to meet Js standards

* Fixing the URLs navigation and adding better documentation

* Fix page name

* Renaming next/previous functions

* Fixing issue when there are only 2 items in the stack

* Fixing tests and TS issues and setting the correct version for GodTools Shared tool

* Adding backwards navigation

* Testing onNavigateToPage()

* Moving tract-page into the page folder

* Switching resourceType to use 'v1' and 'v2' instead of 't' and 'c'.

* Adding redirects for old format to new

* fix xml parser service file name

* Removing 'new' from component names as it's no longer needed.

* GT-2527 - Implement Flows attributes and styling (#229)

* Implement Flow item-width and row-gravity

Co-authored-by: Bizz (Daniel Bisgrove) <dr-bizz@users.noreply.github.com>

* Implement textScale and minimumLines

* Add flex styles to Flow and Flow Items

* Implement start-image

* Fix tests

* add fontWeight and update @cruglobal/godtools-shared to the latest version

* Remove bold text style backup and and make line height scale larger

* Add comment about flex-item flexBasis calculation

---------

Co-authored-by: Bizz (Daniel Bisgrove) <dr-bizz@users.noreply.github.com>

* GT-2528 CYOA Card Collection (#245)

* Add card collection page

* Render the card collection page if 

--- a/src/app/page/component/content-flow/content-flow.component.css
+++ b/src/app/page/component/content-flow/content-flow.component.css
@@ -1,9 +1,14 @@
 .flow {
   margin-top: 25px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px 17.5px;
+  min-width: 300px;
 }
 
-.flow app-content-new-flow-item {
+.flow app-content-flow-item {
   margin: 0;
-  display: inline-block;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
