--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -36,13 +36,32 @@
       </div>
     </header>
 
-    <app-tract-new-page
-      *ngIf="activePage && !bookNotAvailableInLanguage && !bookNotAvailable"
-      [page]="activePage"
-      [order]="activePageOrder"
-      [totalPages]="totalPages"
-    >
-    </app-tract-new-page>
+    <div *ngIf="activePage && !bookNotAvailableInLanguage && !bookNotAvailable">
+      <app-cyoa-page
+        *ngIf="resourceType === 'cyoa' && getPageType() === 'content'"
+        [page]="activePage"
+        [order]="activePageOrder"
+        [totalPages]="totalPages"
+      >
+      </app-cyoa-page>
+
+      <app-cyoa-card-collection-page
+        *ngIf="resourceType === 'cyoa' && getPageType() === 'card-collection'"
+        [page]="activePage"
+        [order]="activePageOrder"
+        [totalPages]="totalPages"
+        [setCardUrl]="setCardUrl"
+      >
+      </app-cyoa-card-collection-page>
+
+      <app-tract-page
+        *ngIf="resourceType === 'tract'"
+        [page]="activePage"
+        [order]="activePageOrder"
+        [totalPages]="totalPages"
+      >
+      </app-tract-page>
+    </div>
 
     <ng-container *ngIf="bookNotAvailableInLanguage">
       <div class="bs-jumbotron tc" style="margin-top: 24px">
