--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -2,9 +2,17 @@
   <!-- Add back whe text is formatted [ngStyle]="{ color: textColor }" -->
   <p
     class="mw568 textContent"
-    [ngClass]="{ firstContent: isFirstPage$ | async }"
+    [ngClass]="{
+      firstContent: isFirstPage$ | async
+    }"
     [ngStyle]="styles"
-    [innerHTML]="textValue"
     dir="{{ dir$ | async }}"
-  ></p>
+  >
+    <img
+      *ngIf="startImgResource"
+      [src]="startImgResource"
+      [ngStyle]="{ width: startImgWidth }"
+      [alt]="text"
+    /><span [innerHTML]="textValue"></span>
+  </p>
 </ng-container>
