--- a/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
+++ b/src/app/page/component/page/cyoa-card-collection-page/cyoa-card-collection-page.component.html
@@ -1,38 +1,34 @@
 <ng-container *ngIf="ready">
-  <div
-    id="toolContent"
-    [ngClass]="{
-      tc: isLastPage$ | async,
-      firstPage: isFirstPage$ | async,
-      lastPage: isLastPage$ | async,
-      hasPageHeader: hasPageHeader
-    }"
-  >
-    <app-page-new-header
-      *ngIf="header && (isModal$ | async) === false"
-      [header]="header"
-    ></app-page-new-header>
-    <app-page-new-hero
-      *ngIf="hero && (isModal$ | async) === false"
-      [hero]="hero"
-    ></app-page-new-hero>
-    <ng-container *ngIf="cards && cards.length && (isModal$ | async) === false">
-      <app-page-new-card
-        *ngFor="let card of cards"
-        [card]="card"
-      ></app-page-new-card>
+  <div id="toolContent">
+    <div
+      class="back-arrow-container"
+      [ngClass]="{
+        rtl: (dir$ | async) === 'rtl',
+        ltr: (dir$ | async) === 'ltr'
+      }"
+    >
+      <a
+        (click)="navigateBack()"
+        href="javascript:void(0)"
+        *ngIf="showBackButton"
+        class="backwards-navigation"
+      >
+        <img src="assets/img/back-arrow.png" alt="navigate back" />
+      </a>
+    </div>
+    <ng-container *ngIf="headerContent">
+      <app-content-repeater [items]="headerContent"></app-content-repeater>
     </ng-container>
-    <app-page-new-calltoaction
-      *ngIf="
-        callToAction &&
-        (isForm$ | async) === false &&
-        (isModal$ | async) === false
-      "
-      [item]="callToAction"
-    ></app-page-new-calltoaction>
 
-    <ng-container *ngIf="modal && (isModal$ | async)">
-      <app-page-new-modal [modal]="modal"></app-page-new-modal>
+    <app-content-repeater
+      [items]="content"
+      *ngIf="content"
+    ></app-content-repeater>
+    <ng-container *ngIf="currentCard && (isModal$ | async) === false">
+      <app-cyoa-card
+        [card]="currentCard"
+        [totalCards]="totalCards"
+      ></app-cyoa-card>
     </ng-container>
 
     <div
@@ -42,9 +38,9 @@
     >
       <ng-container *ngIf="(dir$ | async) === 'ltr'">
         <!-- If not first page -->
-        <ng-container *ngIf="(isFirstPage$ | async) === false">
+        <ng-container *ngIf="!isFirstCard()">
           <a
-            (click)="previous()"
+            (click)="showPreviousCard()"
             href="javascript:void(0)"
             class="button button-white far fa-arrow-left"
             ><span class="hide"></span
@@ -52,9 +48,9 @@
         </ng-container>
 
         <!-- If not last page -->
-        <ng-container *ngIf="(isLastPage$ | async) === false">
+        <ng-container *ngIf="!isLastCard()">
           <a
-            (click)="next()"
+            (click)="showNextCard()"
             href="javascript:void(0)"
             class="button far fa-arrow-right"
             ><span class="hide"></span
@@ -64,9 +60,9 @@
 
       <ng-container *ngIf="(dir$ | async) === 'rtl'">
         <!-- If not first page -->
-        <ng-container *ngIf="(isLastPage$ | async) === false">
+        <ng-container *ngIf="!isLastCard()">
           <a
-            (click)="next()"
+            (click)="showNextCard()"
             href="javascript:void(0)"
             class="button far fa-arrow-left"
             ><span class="hide"></span
@@ -74,9 +70,9 @@
         </ng-container>
 
         <!-- If not last page -->
-        <ng-container *ngIf="(isFirstPage$ | async) === false">
+        <ng-container *ngIf="!isFirstCard()">
           <a
-            (click)="previous()"
+            (click)="showPreviousCard()"
             href="javascript:void(0)"
             class="button button-white far fa-arrow-right"
             ><span class="hide"></span
@@ -85,9 +81,7 @@
       </ng-container>
     </div>
 
-    <ng-container
-      *ngIf="(isModal$ | async) === false && (isModal$ | async) === false"
-    >
+    <ng-container *ngIf="(isModal$ | async) === false">
       <footer id="toolFooter">
         <span
           ><a href="https://godtoolsapp.com" target="_blank"
