--- a/src/app/page/component/page/default-page.css
+++ b/src/app/page/component/page/default-page.css
@@ -1,8 +1,3 @@
-app-tract-new-page {
-  width: 100%;
-  display: block;
-}
-
 /***** Buttons *****/
 .button {
   cursor: pointer;
@@ -90,11 +85,11 @@ app-tract-new-page {
   margin-left: 12px;
 }
 
-#toolContent.hasPageHeader > app-page-new-hero > .stepHeading {
+#toolContent.hasPageHeader > app-page-hero > .stepHeading {
   padding: 0;
 }
 
-#toolContent.hasPageHeader > app-page-new-hero > .stepHeading > h1 {
+#toolContent.hasPageHeader > app-page-hero > .stepHeading > h1 {
   display: none;
 }
 
@@ -103,7 +98,7 @@ app-tract-new-page {
   h4 {
     font-size: 32px;
     line-height: 1.1667;
-    font-weight: 200;    
+    font-weight: 200;
   }
 }
 
@@ -149,7 +144,7 @@ app-tract-new-page {
   .stepHeading h1[dir='rtl'] span {
     left: auto;
     right: -64px;
-  }  
+  }
 }
 
 /***** Forms *****/
@@ -252,21 +247,18 @@ div.cardContent:not(.hasHading) {
   margin-top: 48px !important;
 }
 
-
-app-content-new-repeater > app-content-new-text {
-  margin-top: 24px
+app-content-repeater > app-content-text {
+  margin-top: 24px;
 }
 @media screen and (min-width: 616px) {
-
-  div.cardContent.hasHeading app-content-new-text > p.textContent,
-  div.tabContent app-content-new-text > p.textContent {
+  div.cardContent.hasHeading app-content-text > p.textContent,
+  div.tabContent app-content-text > p.textContent {
     padding-left: 44px;
     padding-right: 44px;
   }
-  
-  .modal-paragraph > app-content-new-text > p.textContent {
+
+  .modal-paragraph > app-content-text > p.textContent {
     padding-left: 44px;
-    padding-right: 44px;    
+    padding-right: 44px;
   }
 }
-
