--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,26 +18,21 @@
 </header>
 
 <section id="homeTools">
-  <div class="bs-container">
-    <div class="bs-card-deck">
-      <a
-        href="javascript:void(0)"
-        class="bs-card"
-        (click)="navigateToPage(resource)"
-        *ngFor="let resource of resources; let i = index; let isFirstRow = last"
-      >
-        <img class="bs-card-img-top" [src]="resource.imgUrl" />
-        <div class="bs-card-body">
-          <h5 class="bs-card-title" dir="{{ dispLanguageDirection }}">
-            {{ resource.resourceName }}
-          </h5>
-          <p class="bs-card-text" dir="{{ dispLanguageDirection }}">
-            {{ resource.tagline }}
-          </p>
-        </div>
-      </a>
-    </div>
-  </div>
+  <app-dashboard-list
+    title="Tools"
+    [resources]="tools"
+    [dispLanguageDirection]="dispLanguageDirection"
+    (resourceClick)="navigateToPage($event)"
+  >
+  </app-dashboard-list>
+
+  <app-dashboard-list
+    title="Lessons"
+    [resources]="lessons"
+    [dispLanguageDirection]="dispLanguageDirection"
+    (resourceClick)="navigateToPage($event)"
+  >
+  </app-dashboard-list>
 </section>
 
 <footer
@@ -61,7 +56,15 @@
     <div class="modal-close">
       <i class="fas fa-times" (click)="onSwitchLanguage()"></i>
     </div>
-    <ul class="languages-grid">
+    <input
+      type="text"
+      ng-model="searchQuery"
+      placeholder="Search languages..."
+    />
+    <ul
+      class="languages-grid"
+      ng-repeat="lang in availableLanguages | filter:searchQuery"
+    >
       <li
         class="language"
         *ngFor="let lang of availableLangs"
