--- a/src/app/page/component/dashboard-list/dashboard-list.component.html
+++ b/src/app/page/component/dashboard-list/dashboard-list.component.html
@@ -1,4 +1,4 @@
-<div class="bs-container">
+<div>
   <div class="resource-header">
     <h2 class="list-header">{{ title }}</h2>
     <a
@@ -7,7 +7,7 @@
       (click)="onViewResourceClick()"
     >
       <span class="view-all-text">{{ viewAllText }} {{ title }}</span>
-      <em class="fas fa-arrow-right"></em>
+      <em class="far fa-arrow-right"></em>
     </a>
   </div>
 
