--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,18 +20,22 @@
 <section id="homeTools">
   <div class="bs-container">
     <app-dashboard-list
+      *ngIf="isMainDashboard() || isToolsPage()"
       title="Tools"
-      [resources]="tools"
+      [resources]="isToolsPage() ? tools : (tools | slice: 0 : 3)"
       [dispLanguageDirection]="dispLanguageDirection"
-      (resourceClick)="navigateToPage($event)"
+      (resourceClick)="navigateToResourcePage($event)"
+      (viewAllClick)="navigateToListPage(toolsRoute)"
     >
     </app-dashboard-list>
 
     <app-dashboard-list
+      *ngIf="isMainDashboard() || isLessonsPage()"
       title="Lessons"
-      [resources]="lessons"
+      [resources]="isLessonsPage() ? lessons : (lessons | slice: 0 : 3)"
       [dispLanguageDirection]="dispLanguageDirection"
-      (resourceClick)="navigateToPage($event)"
+      (resourceClick)="navigateToResourcePage($event)"
+      (viewAllClick)="navigateToListPage(lessonsRoute)"
     >
     </app-dashboard-list>
   </div>
