--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,12 +4,12 @@
       <img src="assets/img/kg-logo.png" />
     </a>
     <div class="navigation">
-      <a routerLink="/{{ dispLanguageCode }}/tools" routerLinkActive="active"
-        >Tools</a
-      >
-      <a routerLink="/{{ dispLanguageCode }}/lessons" routerLinkActive="active"
-        >Lessons</a
-      >
+      <a routerLink="/{{ dispLanguageCode }}/tools" routerLinkActive="active">
+        Tools
+      </a>
+      <a routerLink="/{{ dispLanguageCode }}/lessons" routerLinkActive="active">
+        Lessons
+      </a>
     </div>
     <div class="language-switcher">
       <div
