--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,6 +18,30 @@
   font-size: 0;
 }
 
+#homeHeader > .bs-container {
+  display: flex;
+  align-items: center;
+}
+
+#homeHeader > .bs-container > .navigation {
+  display: flex;
+  gap: 20px;
+  margin-left: 20px;
+}
+
+#homeHeader > .bs-container > .navigation > a {
+  font-size: 14px;
+  font-weight: 800;
+}
+
+#homeHeader > .bs-container > .navigation > a.active {
+  color: var(--kg-white);
+}
+
+#homeHeader > .bs-container > .navigation > a:hover {
+  text-decoration: underline;
+}
+
 #homeHeader > .bs-container > img {
   display: inline-block;
   height: 24px;
@@ -26,7 +50,6 @@
 #homeHeader > .bs-container > .language-switcher > div.selector {
   display: flex;
   flex-direction: row;
-  height: 100%;
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -118,7 +141,7 @@
   padding: 0 8px;
   align-items: center;
   font-size: 13px;
-  color: #666;
+  color: #555;
   align-items: center;
   white-space: nowrap;
   overflow: hidden;
@@ -149,13 +172,13 @@
   opacity: 0.5;
 }
 
-#homeTools app-dashboard-list {
-  display: block;
-  margin-bottom: 40px;
-}
-
 #homeTools {
   padding-block: 45px;
+}
+
+#homeTools > .bs-container > app-dashboard-list {
+  display: block;
+  margin-bottom: 40px;
 }
 
 /***** Responsive *****/
