--- a/src/app/page/component/dashboard-list/dashboard-list.component.html
+++ b/src/app/page/component/dashboard-list/dashboard-list.component.html
@@ -1,11 +1,7 @@
 <div>
   <div class="resource-header">
     <h2 class="list-header">{{ title }}</h2>
-    <a
-      href="javascript:void(0)"
-      class="view-all-link"
-      (click)="onViewResourceClick()"
-    >
+    <a *ngIf="viewAllRoute" [routerLink]="[viewAllRoute]" class="view-all-link">
       <span class="view-all-text">{{ viewAllText }} {{ title }}</span>
       <em class="far fa-arrow-right"></em>
     </a>
@@ -16,7 +12,7 @@
       href="javascript:void(0)"
       class="bs-card"
       (click)="onResourceClick(resource)"
-      *ngFor="let resource of resources | slice: 0 : 3; let i = index"
+      *ngFor="let resource of resources"
     >
       <img
         class="bs-card-img-top"
