adds loading spinner

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,8 @@
 </header>
 
 <section id="homeTools">
-  <div class="bs-container">
+  <app-loader *ngIf="!sectionReady"></app-loader>
+  <div class="bs-container" *ngIf="sectionReady">
     <app-dashboard-list
       *ngIf="isMainDashboard() || isToolsPage()"
       title="Tools"
