--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/{{ dispLanguageCode }}" routerLinkActive="active">
       <img src="assets/img/kg-logo.png" />
     </a>
-    <div class="navigation">
+    <div class="navigation" [class.main-dashboard]="isMainDashboard()">
       <a routerLink="/{{ dispLanguageCode }}/tools" routerLinkActive="active">
         Tools
       </a>
